



public interface DapatDipinjam {
    
    // Method untuk meminjam item perpustakaan
    public void pinjamItem();

    // method untuk mengembalikan item perpustakaan
    public void kembalikanItem();
}
